--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,27 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-buttons slot="start">
+      <ion-button>
+        <ion-icon name="menu" class="menu-icon"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+      <div class="location-class">
+        <p class="location">DHA Phase 1</p>
+        <p class="city">Lahore</p>
+      </div>
+
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon name="heart-outline" class="fav-icon"></ion-icon>
+        <ion-icon name="bag-outline" class="cart-icon"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+      
+    
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  
 </ion-content>
