--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header [translucent]="true" >
+  <ion-toolbar class="toolbar">
     <ion-buttons slot="start">
       <ion-button>
         <ion-icon name="menu" class="menu-icon"></ion-icon>
@@ -23,5 +23,8 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+  <ion-searchbar placeholder="Search for shops & restaurants" class="search-class"></ion-searchbar>
+   
   
 </ion-content>
