--- a/src/app/business-details/business-details.page.html
+++ b/src/app/business-details/business-details.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button>
@@ -17,9 +17,133 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
+  <ion-card class="main-card">
+    <ion-item class="items-class" lines="none">
+      <ion-button shape="round" size="small" class="back-btn">
+        <ion-icon name="arrow-back-outline" class="back-icon"></ion-icon>
+      </ion-button>
 
+      <ion-button shape="round" size="small" slot="end" class="share-btn">
+        <ion-icon name="share-social-outline" class="share-icon"></ion-icon>
+      </ion-button>
+    </ion-item>
+    <img src="assets/restaurantDetails/restaurant-first-card.png" style="background-color: whitesmoke;">
+
+  </ion-card>
+
+  <ion-card class="details-card">
+    <ion-item lines="none">
+      <ion-label>
+        <h3 class="business-heading">Greeno Juice Bar- Phase 2</h3>
+        <p class="business-para">
+          <span class="km">1km away |</span>
+          <span class="rating">
+            <ion-icon name="star" class="star-icon"></ion-icon>
+            <ion-icon name="star" class="star-icon"></ion-icon>
+            <ion-icon name="star" class="star-icon"></ion-icon>
+            <ion-icon name="star" class="star-icon"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            690 ratings
+          </span>
+        </p>
+
+      </ion-label>
+      <ion-button slot="end" class="more-info-btn" fill="clear">
+        More info
+      </ion-button>
+    </ion-item>
+    <ion-item lines="none" class="delivery-item">
+      <ion-label>
+        <p class="delivery-para">
+          <span>
+            <ion-icon name="time-outline" class="time-icon"></ion-icon>
+          </span>
+          <span class="delivery-time">
+            Delivery: 15 min
+          </span>
+        </p>
+      </ion-label>
+      <ion-button slot="end" class="change-btn" fill="clear" disabled>
+        change
+      </ion-button>
+    </ion-item>
+  </ion-card>
+  <ion-segment scrollable value="Popular">
+    <ion-segment-button value="Popular" class="segment-btn-class">
+      Popular
+    </ion-segment-button>
+    <ion-segment-button value="Salad" class="segment-btn-class">Salad</ion-segment-button>
+    <ion-segment-button value="Hot Selling item" class="segment-btn-class">Hot selling items</ion-segment-button>
+    <ion-segment-button value="Favourites" class="segment-btn-class">Favourites</ion-segment-button>
+    <ion-segment-button value="Seasonal Delight" class="segment-btn-class">Seasonal Delight</ion-segment-button>
+  </ion-segment>
+
+  <ion-item lines="none">
+    <ion-label>
+    
+      <ion-icon name="flame" class="fire-icon"></ion-icon>
+    
+      <span style="font-weight: bold; padding-left: 2px;">Popular</span>
+      
+    <p style="color: black;">Most Ordered right now.</p>
+  </ion-label>
+  </ion-item>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" >
+        <ion-card class="grid-col">
+          <img src="assets/restaurantDetails/business-image.png">
+        <div class="para-gradient">
+          <p class="popular-gradient-para">
+            2 big 2 Better deal 1
+          </p>
+        </div>
+          <ion-badge class="price-badge">Rs. 699.00</ion-badge>
+        </ion-card>
+      </ion-col>
+
+      <ion-col size="6"  >
+        <ion-card class="grid-col">
+          <img src="assets/restaurantDetails/business-image.png">
+        <div class="para-gradient">
+          <p class="popular-gradient-para">
+            2 big 2 Better deal 1
+          </p>
+        </div>
+          <ion-badge class="price-badge">Rs. 799.00</ion-badge>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="6" >
+        <ion-card class="grid-col">
+          <img src="assets/restaurantDetails/business-image.png">
+        <div class="para-gradient">
+          <p class="popular-gradient-para">
+            2 big 2 Better deal 1
+          </p>
+        </div>
+          <ion-badge class="price-badge">Rs. 699.00</ion-badge>
+        </ion-card>
+      </ion-col>
+
+      <ion-col size="6"  >
+        <ion-card class="grid-col">
+          <img src="assets/restaurantDetails/business-image.png">
+        <div class="para-gradient">
+          <p class="popular-gradient-para">
+            2 big 2 Better deal 1
+          </p>
+        </div>
+          <ion-badge class="price-badge">Rs. 799.00</ion-badge>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
