--- a/src/app/business-details/business-details.page.scss
+++ b/src/app/business-details/business-details.page.scss
@@ -1,14 +1,102 @@
-.back-icon, .share-icon{
+::-webkit-scrollbar{
+    display: none;
+}
+ion-card{
+    margin: 0px;
+    box-shadow: none;
+}
+.back-icon, .share-icon, .time-icon{
     color: #C60D5C;
 }
 
-.delivery{
-    font-size: 14px;
-    font-weight: bold;
+// .delivery{
+//     font-size: 14px;
+//     font-weight: bold;
+//     margin: 0px;
+// }
+// .time{
+//     font-size: 12px;
+//     margin: 0px;
+//     color: #C60D5C;
+// }
+.main-card{
     margin: 0px;
+    box-shadow: none;
 }
-.time{
-    font-size: 12px;
+.items-class{
+    --background:transparent;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 5px;
+}
+.back-btn , .share-btn{
+    --background: white;
+}
+.km,.rating{
+    font-size:12px;
+}
+.delivery-item{
     margin: 0px;
+    margin-top: -11px;
+}
+.star-icon{
     color: #C60D5C;
+}
+.more-info-btn{
+    --background: transparent;
+    color: #C60D5C;
+    text-transform: initial;
+    width: 19%;
+}
+.change-btn{
+    --background:transparent;
+    color: #726a6a;
+    text-transform: initial;
+
+}
+.delivery-time{
+    font-weight: bold;
+    font-size: 12px;
+}
+.segment-btn-class{
+    color: black;
+    font-weight: bold;
+    text-transform: initial;
+    font-size: 12px;
+    
+}
+.segment-button-checked{
+    color: #C60D5C;
+    --color-checked: #C60D5C;
+    --indicator-height:4px;
+}
+.fire-icon{
+    color:chocolate;
+}
+.grid-col{
+    margin: 5px;
+    box-shadow: 0px 1px 3px 1px lightgray
+}
+.para-gradient{
+    position: absolute;
+    top: 0px;
+    color: #fffbfb;
+    width: 100%;
+    font-weight: bold;
+    background: linear-gradient(180deg, rgb(139 139 143) 0%, rgba(224,224,235,0) 69%);
+    height: 48px;
+}
+.popular-gradient-para{
+    margin: 0px; 
+    padding-top: 5px; 
+    text-align: center;
+}
+.price-badge{
+    position: absolute;
+    bottom: 19px;
+    right: 5px;
+    color: black;
+    background: white;
+    border-radius: 20px;
 }
