completed item details page and cart details page

--- a/src/app/business-details/business-details.page.html
+++ b/src/app/business-details/business-details.page.html
@@ -22,7 +22,7 @@
 <ion-content>
   <ion-card class="main-card">
     <ion-item class="items-class" lines="none">
-      <ion-button shape="round" size="small" class="back-btn">
+      <ion-button shape="round" size="small" class="back-btn" (click) = "goToHome()">
         <ion-icon name="arrow-back-outline" class="back-icon"></ion-icon>
       </ion-button>
 
