--- a/src/app/item-details/item-details.page.scss
+++ b/src/app/item-details/item-details.page.scss
@@ -46,7 +46,7 @@ ion-card{
     padding-left: 15px;
 }
 .remove-order-label{
-    border: 2px solid #d1c9c9;
+    border: 1px solid #d1c9c9;
     border-radius: 5px;
 }
 .remove-para{
@@ -59,4 +59,42 @@ ion-card{
     position: relative;
     top: -10px;
     right: -284px;
+}
+.special-para{
+    padding-left: 14px;
+}
+.special-textarea{
+    border:1px solid #d1c9c9;
+}
+
+.footer{
+    padding:10px;
+}
+.plus-minus-container{
+    display: flex;
+}
+
+
+.cart-button{
+    text-transform: initial;
+    width: 64%;
+    margin-top: 10px;
+    --background: #C60D5C;
+}
+
+.quantity-button{
+    height: 27px;
+    --background: #C60D5C;
+    width: 27px;
+    --box-shadow: none;
+    margin-top: 14px;
+    margin-right: 15px;
+}
+.quantity-icon{
+    width: 20px;
+    height: 20px;
+}
+.quantity{ 
+    margin-top: 19px;
+    margin-left: -5px;
 }
