added some place order UL and making build

--- a/src/app/cart-details/cart-details.page.html
+++ b/src/app/cart-details/cart-details.page.html
@@ -65,7 +65,7 @@
     </ion-label>
     <p class="total-price">Rs. 460.00</p>
   </ion-item>
-  <ion-button class="review-payment-btn">
+  <ion-button class="review-payment-btn" (click)="goToPlaceOrder()">
     Review payment and address
   </ion-button>
 </ion-footer>
