Added some back functionality and delivery page

--- a/src/app/business-details/business-details.page.html
+++ b/src/app/business-details/business-details.page.html
@@ -22,9 +22,12 @@
 <ion-content>
   <ion-card class="main-card">
     <ion-item class="items-class" lines="none">
-      <ion-button shape="round" size="small" class="back-btn" (click) = "goToHome()">
-        <ion-icon name="arrow-back-outline" class="back-icon"></ion-icon>
-      </ion-button>
+      
+        <ion-button shape="round" size="small" class="back-btn" (click)="goback()">
+          <ion-icon name="arrow-back-outline" class="back-icon"></ion-icon>
+        </ion-button>
+      
+      
 
       <ion-button shape="round" size="small" slot="end" class="share-btn">
         <ion-icon name="share-social-outline" class="share-icon"></ion-icon>
