--- a/src/app/cart-details/cart-details.page.html
+++ b/src/app/cart-details/cart-details.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbar">
     <ion-buttons slot="start">
-      <ion-button (click)="goToitemDetails()">
+      <ion-button (click)="goback()">
         <ion-icon name="close-outline" class="close-icon"></ion-icon>
       </ion-button>
     </ion-buttons>
