--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -42,7 +42,7 @@
 
   <div class="cards-grid">
 
-    <ion-card class="first-card">
+    <ion-card class="first-card" (click) = "goToFoodDelivery()">
       <img src="assets/first-card-img.png" class="first-card-img">
       <ion-card-header>
         <ion-card-title>
@@ -56,7 +56,7 @@
 
     </ion-card>
 
-    <ion-card class="second-card">
+    <ion-card class="second-card" (click) = "goToFoodDelivery()">
       <img src="assets/pandamart-img.png" class="pandamart-img" >
       
       <ion-card-header>
@@ -70,9 +70,9 @@
 
     </ion-card>
 
-    <ion-card class="third-card">
+    <ion-card class="third-card" >
 
-    <ion-card class="third-first-card">
+    <ion-card class="third-first-card" (click) = "goToFoodDelivery()">
       <img src="assets/take-away.png" class="takeaway-img" >
 
       <ion-card-header>
@@ -86,7 +86,7 @@
 
     </ion-card>
 
-    <ion-card class="third-second-card">
+    <ion-card class="third-second-card" (click) = "goToFoodDelivery()">
       <img src="assets/grocery.png" class="grocery-img" >
       <ion-card-header style="padding: 0px; padding-left: 10px;">
         <ion-card-title>
