--- a/src/app/item-details/item-details.page.html
+++ b/src/app/item-details/item-details.page.html
@@ -2,7 +2,7 @@
 <ion-content>
   <ion-card class="main-card">
     <ion-item class="items-class" lines="none">
-      <ion-button shape="round" size="small" class="back-btn" (click) = "goTobusinessDetails()">
+      <ion-button shape="round" size="small" class="back-btn" (click) = "goback()">
         <ion-icon name="arrow-back-outline" class="back-icon"></ion-icon>
       </ion-button>
     </ion-item>
