--- a/src/app/place-order/place-order.page.html
+++ b/src/app/place-order/place-order.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbar">
     <ion-buttons slot="start">
-      <ion-button (click)="goToCartDetails()">
+      <ion-button (click)="goback()">
         <ion-icon name="arrow-back-outline" class="arrow-icon"></ion-icon>
       </ion-button>
     </ion-buttons>
