--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbar">
     <ion-buttons slot="start">
-      <ion-button>
+      <!-- <ion-button>
         <ion-icon name="menu" class="menu-icon"></ion-icon>
-      </ion-button>
+      </ion-button> -->
+      <ion-menu-button class="menu-icon"></ion-menu-button>
     </ion-buttons>
 
     <div class="location-class">
